# anomaly-toolbox

./: .coveragerc  .flake8  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
config/: hparams.json  hparams_tuning.json
docs/: Makefile
docs/source/: api.rst  conf.py  dependencies_graph.rst  index.rst  installation.rst  usage.rst
examples/: dummy.py
requirements/: base.txt  docs.txt  linting.txt  test.txt
requirements.in/: base.txt  dev.txt  docs.txt  linting.txt  test.txt
src/anomaly_toolbox/: __init__.py  cli.py  datasets.py  hps.py
src/anomaly_toolbox/benchmarks/: __init__.py  ganomaly.py  metrics.py
src/anomaly_toolbox/benchmarks/mnist/: ganomaly.py
src/anomaly_toolbox/datasets/: README.md  __init__.py  corrupted_mnist.py  dataset.py  dummy.py  mnist.py  mvtecad.py  surface_cracks.py
src/anomaly_toolbox/experiments/: __init__.py  anogan.py  descargan.py  egbad.py  experiment.py  ganomaly.py  interface.py
src/anomaly_toolbox/losses/: __init__.py  anogan.py  bigan.py  egbad.py  ganomaly.py  losses.py
src/anomaly_toolbox/models/: __init__.py  anogan.py  bigan.py  descargan.py  egbad.py  egbad_2.py  ganomaly.py  ganomaly_2.py
src/anomaly_toolbox/predictors/: __init__.py  ganomaly.py
src/anomaly_toolbox/trainers/: __init__.py  anogan.py  bigan.py  descargan.py  egbad.py  ganomaly.py  ganomaly_2.py  interface.py  trainer.py
tests/: test_anomaly_toolbox.py
